kubernetes/flux/applications/base/giftlist/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: giftlist
  namespace: giftlist
spec:
  selector:
    name: giftlist
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
